Project

General

Profile

Actions

Bug #45467

closed

Put policy should return 204 instead of 200

Added by Pierre Ozoux about 4 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
octopus, nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

I have ceph version 14.2.8 (2d095e947a02261ce61424021bb43bd3022d35cb) nautilus (stable)

And I'm hitting the bug described here:
https://github.com/minio/mc/issues/2393#issuecomment-367447570

```
Ceph is returning 200 as output of put bucket policy. Please take a look at
https://docs.aws.amazon.com/AmazonS3/latest/API/RESTBucketPUTpolicy.html

If you look at the sample response, you can see that the returned status is 204

Ceph should be returning 204 instead of 200
```


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #48426: nautilus: Put policy should return 204 instead of 200ResolvedNathan CutlerActions
Copied to rgw - Backport #48427: octopus: Put policy should return 204 instead of 200ResolvedNathan CutlerActions
Actions #1

Updated by Matthew Oliver about 4 years ago

Yup confirmed in master. When I put a bucket policy it returns a 200. Will take a look and raise a patch for it to return 204

Actions #2

Updated by Matthew Oliver about 4 years ago

Pushed up a PR to fix this https://github.com/ceph/ceph/pull/35059

Before the PR, a successful PUT bucket policy in the logs had:

2020-05-13T06:41:42.077+0000 7fe887ec1700  2 req 4 0.056000411s s3:put_bucket_policy completing
2020-05-13T06:41:42.077+0000 7fe887ec1700  2 req 4 0.056000411s s3:put_bucket_policy op status=0
2020-05-13T06:41:42.077+0000 7fe887ec1700  2 req 4 0.056000411s s3:put_bucket_policy http status=200

Afterwards:

2020-05-14T01:09:14.792+0000 7f8719517700  2 req 2 0.060000439s s3:put_bucket_policy completing
2020-05-14T01:09:14.792+0000 7f8719517700  2 req 2 0.060000439s s3:put_bucket_policy op status=1902
2020-05-14T01:09:14.792+0000 7f8719517700  2 req 2 0.060000439s s3:put_bucket_policy http status=204
Actions #3

Updated by Nathan Cutler about 4 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 35059
Actions #4

Updated by Nathan Cutler about 4 years ago

  • Backport set to octopus, nautilus
Actions #5

Updated by Pierre Ozoux about 4 years ago

Wow, it was fast :)

Thanks a lot for looking into this and fixing that fast.

Have a nice day!

Actions #6

Updated by J. Eric Ivancich over 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #7

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #48426: nautilus: Put policy should return 204 instead of 200 added
Actions #8

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #48427: octopus: Put policy should return 204 instead of 200 added
Actions #9

Updated by Nathan Cutler over 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF